# midiverse

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker_setup.sh  install_deps.sh  midiverse.py  test_chords.mid
cli/: midiverse_cli.cpp
examples/: client.py  requirements.txt
include/: audio_writer.h  midi_processor.h  server.h  vst_renderer.h
input/: generate_test_midi.py  test_scale.mid
python_server/: server.py
src/: audio_writer.cpp  main.cpp  midi_processor.cpp  server.cpp  vst_renderer.cpp
tests/: CMakeLists.txt  py_server.py  simple_server.cpp  test_connection.py
